Start refactoring this a bit, too much state to keep 'global'

--- a/src/screenshot.html
+++ b/src/screenshot.html
@@ -74,6 +74,6 @@
       <svg id="svgOverlay"></svg>
       <img id="screenshotImg" />
     </div>
-    <script src="screenshot.js"></script>
+    <script type="module" src="screenshot.js"></script>
   </body>
 </html>
