--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,7 @@
         display: grid;
         grid-template-columns: 40% 40%; /* Two equal-width columns */
         /*grid-template-rows: 60% 60%;   /* Two equal-height rows */
-        height: 200vh; /* Make it take up full viewport height */
+        height: 50vh; /* Make it take up full viewport height */
         background: black;
         grid-gap: 5%;
       }
@@ -24,5 +24,7 @@
   </head>
   <body>
     <iframe src="test_arrow.html"></iframe>
+    <iframe src="test_rect.html"></iframe>
+    <iframe src="test_text.html"></iframe>
   </body>
 </html>
