Fix a text edge case, add info about local development and tests

--- a/src/screenshot.html
+++ b/src/screenshot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Goita tu</title>
@@ -73,7 +73,7 @@
         font-family: "Roboto Mono";
         font-size: 16px;
         width: 50%;
-        
+
         border-radius: 0.3em;
         border: 2px solid black;
         background-color: rgba(200, 200, 200, 0.95);
@@ -83,7 +83,7 @@
         margin-top: 0;
         margin-bottom: 0.3em;
       }
-      #help  code {
+      #help code {
         font-weight: bold;
         white-space: pre;
       }
@@ -94,12 +94,12 @@
   </head>
   <body>
     <div id="help" class="hide">
-      <p style="text-align: center;"><code>Goita!</code> Ruben Berenguel 2024</p>
-      <hr/>
+      <p style="text-align: center"><code>Goita!</code> Ruben Berenguel 2024</p>
+      <hr />
       <ul>
-      <li>Everything you can create can be dragged around and deleted.</li>
-      <li>Click to select things.</li>
-      <li>Drag to move them.</li>
+        <li>Everything you can create can be dragged around and deleted.</li>
+        <li>Click to select things.</li>
+        <li>Drag to move them.</li>
       </ul>
       <p><code>h</code>: show and hide this help</p>
       <p><code>a</code>: draw an arrow</p>
@@ -108,16 +108,16 @@
       <p><code>t</code>: write text</p>
       <p><code>v</code>: paste images or text from the clipboard</p>
       <p><code>k</code>: clip the screenshot</p>
-      <p><code>  drag</code>: dragging moves the clipped image</p>
-      <p><code>  shift+drag</code>: dragging moves the clipping rectangle</p>
+      <p><code> drag</code>: dragging moves the clipped image</p>
+      <p><code> shift+drag</code>: dragging moves the clipping rectangle</p>
       <p><code>c</code>: choose color for the next operations</p>
-      <p><code>  r</code>: red (default)</p>
-      <p><code>  y</code>: yellow</p>
-      <p><code>  b</code>: blue</p>
-      <p><code>  g</code>: green</p>
-      <p><code>  o</code>: orange</p>
-      <p><code>  w</code>: white</p>
-      <p><code>  x</code>: black (and highlight then redacts)</p>
+      <p><code> r</code>: red (default)</p>
+      <p><code> y</code>: yellow</p>
+      <p><code> b</code>: blue</p>
+      <p><code> g</code>: green</p>
+      <p><code> o</code>: orange</p>
+      <p><code> w</code>: white</p>
+      <p><code> x</code>: black (and highlight then redacts)</p>
       <p><code>backspace</code>: delete anything selected</p>
     </div>
     <div id="screenshotContainer">
